an error of MultiRadialRuinSelector is modified