@@ -7,7 +7,9 @@ import org.matsim.drtExperiments.basicStructures.TimetableEntry;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Random;
-import java.util.stream.Collectors;
+/**
+ * remove requests from the randomly selected round trip *
+ */
 
 public class SequentialRuinSelector implements RuinSelector{
     private final Random random;
@@ -24,14 +26,19 @@ public class SequentialRuinSelector implements RuinSelector{
         for (List<TimetableEntry> timetable : fleetSchedules.vehicleToTimetableMap().values()) {
             timetable.stream().filter(s -> s.getStopType() == TimetableEntry.StopType.PICKUP).forEach(s -> openRequests.add(s.getRequest()));
         }
-        // remove requests from the randomly selected round trip
+        // TODO ist  this alltrips right?
         List<List<TimetableEntry>> allTrips = new ArrayList<>(fleetSchedules.vehicleToTimetableMap().values());
         List<GeneralRequest> requestsToBeRuined = new ArrayList<>();
 
-        while (requestsToBeRuined.size() < openRequests.size() * proportion_to_remove){
+        int numToRemoved = (int) (openRequests.size() * proportion_to_remove) + 1;
+        int maxRemoval = 1000;
+        numToRemoved = Math.min(numToRemoved, maxRemoval);
+        numToRemoved = Math.min(numToRemoved, openRequests.size());
+
+        while (requestsToBeRuined.size() < numToRemoved){
             List<TimetableEntry> selectedTrip = allTrips.get(random.nextInt(allTrips.size()));
             for (GeneralRequest openRequest : getRequestsFromTrip(selectedTrip)){
-                if (requestsToBeRuined.size()  >= openRequests.size() * proportion_to_remove){
+                if (requestsToBeRuined.size()  >= numToRemoved){
                     return requestsToBeRuined;
                 }
                 requestsToBeRuined.add(openRequest);
@@ -42,11 +49,14 @@ public class SequentialRuinSelector implements RuinSelector{
 
     @Override
     public double getParameter() {
-        return 0;
+        return proportion_to_remove;
     }
+
     public List<GeneralRequest> getRequestsFromTrip(List<TimetableEntry> trip) {
         return trip.stream()
                 .map(TimetableEntry::getRequest) // Extract the GeneralRequest from each TimetableEntry
-                .collect(Collectors.toList());  // Collect the requests into a List
+                .toList();
     }
+
+
 }
